actualizacion: se incluye la visualizacion del pokemon individual a detalle

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:background="@drawable/gradiente"
+        android:background="@drawable/background_pokemon_cardview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
