--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,28 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="hp">#12D815</color>
+    <color name="attack">#FF5722</color>
+    <color name="defense">#36BAE3</color>
+    <color name="spattack">#CA3232</color>
+    <color name="spdefense">#5923C5</color>
+    <color name="speed">#DBAEF6</color>
+    <color name="bug">#77AC3C</color>
+    <color name="dark">#493F44</color>
+    <color name="dragon">#5923C5</color>
+    <color name="electric">#FAFA15</color>
+    <color name="fairy">#FDBADF</color>
+    <color name="fighting">#CA3232</color>
+    <color name="fire">#FF5722</color>
+    <color name="flying">#A799FB</color>
+    <color name="ghost">#DBAEF6</color>
+    <color name="grass">#12D815</color>
+    <color name="ground">#CDA763</color>
+    <color name="ice">#A8FFE2</color>
+    <color name="normal">#E4E2E2</color>
+    <color name="poison">#D623D4</color>
+    <color name="psychic">#FF8DCC</color>
+    <color name="rock">#8A6A31</color>
+    <color name="steel">#A3A0A0</color>
+    <color name="water">#36BAE3</color>
 </resources>
