--- a/app/src/main/res/layout/fragment_single_pokemon.xml
+++ b/app/src/main/res/layout/fragment_single_pokemon.xml
@@ -1,86 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="16dp">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_height="wrap_content"
+        android:padding="5dp">
 
-        <ProgressBar
-            android:id="@+id/progressbar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/bg_cardview_info"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="75dp"/>
 
         <ImageView
-            android:id="@+id/ivPokemonFront"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:id="@+id/ivPokemonSprite"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:contentDescription="@string/image_description"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ToggleButton
-            android:id="@+id/btnShiny"
+        <TextView
+            android:id="@+id/type1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/dots"
+            android:textColor="@color/black"
+            android:layout_marginEnd="5dp"
+            android:layout_marginStart="5dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/type2"
+            app:layout_constraintTop_toBottomOf="@+id/tvNumberAndName" />
+
+        <TextView
+            android:id="@+id/type2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/dots"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/type1"
+            app:layout_constraintTop_toBottomOf="@+id/tvNumberAndName" />
+
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/swShiny"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/shiny"
+            android:layout_height="5dp"
+            android:enabled="false"
+            app:thumbTint="@color/dark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ivPokemonFront" />
+            app:layout_constraintTop_toBottomOf="@id/ivPokemonSprite" />
 
         <TextView
-            android:id="@+id/tvNumber"
+            android:id="@+id/tvNumberAndName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:gravity="center"
             android:text="@string/dots"
-            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnShiny" />
-
-        <TextView
-            android:id="@+id/tvName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/dots"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvNumber" />
+            app:layout_constraintTop_toBottomOf="@+id/swShiny" />
 
         <TextView
             android:id="@+id/tvHeight"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/dots"
-            android:textSize="20sp"
+            android:textSize="15sp"
+            android:textColor="@color/black"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvName" />
+            app:layout_constraintTop_toBottomOf="@+id/type1" />
 
         <TextView
             android:id="@+id/tvWeight"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/dots"
-            android:textSize="20sp"
+            android:textSize="15sp"
+            android:textColor="@color/black"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -90,21 +113,27 @@
             android:id="@+id/tvStats"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:gravity="center"
-            android:text="@string/stats"
-            android:textSize="25sp"
+            android:text="@string/basic_stats"
+            android:textColor="@color/black"
+            android:textSize="17sp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvWeight" />
 
         <TextView
             android:id="@+id/tvHp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="110dp"
+            android:layout_height="30dp"
             android:layout_marginTop="10dp"
-            android:text="@string/loading"
-            android:textSize="20sp"
+            android:text="@string/dots"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:layout_marginStart="5dp"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvStats" />
 
@@ -112,21 +141,25 @@
             android:id="@+id/barHp"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_marginTop="10dp"
             android:max="255"
-            android:progress="70"
+            android:progressTint="@color/hp"
+            android:scaleY="5"
+            android:layout_marginEnd="5dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tvHp"
+            app:layout_constraintStart_toEndOf="@id/tvHp"
             app:layout_constraintTop_toBottomOf="@id/tvStats" />
 
         <TextView
             android:id="@+id/tvAttack"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="110dp"
+            android:layout_height="30dp"
             android:layout_marginTop="10dp"
-            android:text="@string/loading"
-            android:textSize="20sp"
+            android:text="@string/dots"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:layout_marginStart="5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvHp" />
 
@@ -134,21 +167,25 @@
             android:id="@+id/barAttack"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_marginTop="10dp"
-            android:max="255"
-            android:progress="70"
+            android:max="181"
+            android:progressTint="@color/attack"
+            android:scaleY="5"
+            android:layout_marginEnd="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tvAttack"
             app:layout_constraintTop_toBottomOf="@id/barHp" />
 
         <TextView
             android:id="@+id/tvDefense"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="110dp"
+            android:layout_height="30dp"
             android:layout_marginTop="10dp"
-            android:text="@string/loading"
-            android:textSize="20sp"
+            android:text="@string/dots"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:layout_marginStart="5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvAttack" />
 
@@ -156,21 +193,25 @@
             android:id="@+id/barDefense"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_marginTop="10dp"
-            android:max="255"
-            android:progress="70"
+            android:max="230"
+            android:progressTint="@color/defense"
+            android:scaleY="5"
+            android:layout_marginEnd="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tvDefense"
             app:layout_constraintTop_toBottomOf="@id/barAttack" />
 
         <TextView
             android:id="@+id/tvSpAttack"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="110dp"
+            android:layout_height="30dp"
             android:layout_marginTop="10dp"
-            android:text="@string/loading"
-            android:textSize="20sp"
+            android:text="@string/dots"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:layout_marginStart="5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvDefense" />
 
@@ -178,21 +219,24 @@
             android:id="@+id/barSpAttack"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_marginTop="10dp"
-            android:max="255"
-            android:progress="70"
+            android:max="154"
+            android:progressTint="@color/spattack"
+            android:scaleY="5"
+            android:layout_marginEnd="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tvSpAttack"
             app:layout_constraintTop_toBottomOf="@id/barDefense" />
 
         <TextView
             android:id="@+id/tvSpDefense"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="110dp"
+            android:layout_height="30dp"
             android:layout_marginTop="10dp"
-            android:text="@string/loading"
-            android:textSize="20sp"
+            android:text="@string/dots"
+            android:textColor="@color/black"
+            android:layout_marginStart="5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvSpAttack" />
 
@@ -200,21 +244,25 @@
             android:id="@+id/barSpDefense"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_marginTop="10dp"
-            android:max="255"
-            android:progress="70"
+            android:max="230"
+            android:progressTint="@color/spdefense"
+            android:scaleY="5"
+            android:layout_marginEnd="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tvSpDefense"
             app:layout_constraintTop_toBottomOf="@id/barSpAttack" />
 
         <TextView
             android:id="@+id/tvSpeed"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="110dp"
+            android:layout_height="30dp"
             android:layout_marginTop="10dp"
-            android:text="@string/loading"
-            android:textSize="20sp"
+            android:text="@string/dots"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:layout_marginStart="5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvSpDefense" />
 
@@ -222,13 +270,15 @@
             android:id="@+id/barSpeed"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_marginTop="10dp"
-            android:max="255"
-            android:progress="70"
+            android:max="200"
+            android:progressTint="@color/speed"
+            android:scaleY="5"
+            android:layout_marginEnd="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tvSpeed"
             app:layout_constraintTop_toBottomOf="@id/barSpDefense" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</RelativeLayout>
+</androidx.cardview.widget.CardView>
